--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel public/index.html --open",
-    "build": "parcel build public/index.html  --public-url /toxin/"
+    "start": "parcel src/index.pug --open",
+    "build": "parcel build src/index.pug --public-url /toxin/"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/hyperpotamus/toxin#readme",
   "devDependencies": {
-    "parcel-bundler": "^1.12.5"
-  }
+    "parcel-bundler": "^1.12.5",
+    "pug": "^3.0.2"
+  },
+  "dependencies": {}
 }
