--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/hyperpotamus/toxin#readme",
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "sass": "^1.36.0"
   },
   "dependencies": {}
 }
