--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel src/index.pug --open",
+    "start": "parcel -p 4000 src/index.pug --open",
     "build": "parcel build src/index.pug --public-url /toxin/"
   },
   "repository": {
