+gh-pages deploy script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel -p 4000 src/pages/*.pug --open",
-    "build": "parcel build src/pages/*.pug --public-url /toxin/"
+    "build": "parcel build src/pages/*.pug --public-url /toxin/",
+    "deploy": "gh-pages -d dist -b dist"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/hyperpotamus/toxin#readme",
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "parcel-bundler": "^1.12.5",
     "pug": "^3.0.2",
     "sass": "^1.36.0"
