--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sass": "^1.36.0"
   },
   "dependencies": {
+    "air-datepicker": "^2.2.3",
     "item-quantity-dropdown": "^2.1.0",
     "jquery": "^3.6.0"
   }
