--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "air-datepicker": "^2.2.3",
     "item-quantity-dropdown": "^2.1.0",
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "nouislider": "^15.4.0"
   }
 }
